; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/pohmelfs/extr_trans.c_netfs_trans_drop_dst.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/pohmelfs/extr_trans.c_netfs_trans_drop_dst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netfs_trans_dst = type { i32, %struct.netfs_trans* }
%struct.netfs_trans = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @netfs_trans_drop_dst(%struct.netfs_trans_dst* %0) #0 {
  %2 = alloca %struct.netfs_trans_dst*, align 8
  %3 = alloca %struct.netfs_trans*, align 8
  store %struct.netfs_trans_dst* %0, %struct.netfs_trans_dst** %2, align 8
  %4 = load %struct.netfs_trans_dst*, %struct.netfs_trans_dst** %2, align 8
  %5 = getelementptr inbounds %struct.netfs_trans_dst, %struct.netfs_trans_dst* %4, i32 0, i32 1
  %6 = load %struct.netfs_trans*, %struct.netfs_trans** %5, align 8
  store %struct.netfs_trans* %6, %struct.netfs_trans** %3, align 8
  %7 = load %struct.netfs_trans*, %struct.netfs_trans** %3, align 8
  %8 = getelementptr inbounds %struct.netfs_trans, %struct.netfs_trans* %7, i32 0, i32 0
  %9 = call i32 @spin_lock(i32* %8)
  %10 = load %struct.netfs_trans_dst*, %struct.netfs_trans_dst** %2, align 8
  %11 = getelementptr inbounds %struct.netfs_trans_dst, %struct.netfs_trans_dst* %10, i32 0, i32 0
  %12 = call i32 @list_del_init(i32* %11)
  %13 = load %struct.netfs_trans*, %struct.netfs_trans** %3, align 8
  %14 = getelementptr inbounds %struct.netfs_trans, %struct.netfs_trans* %13, i32 0, i32 0
  %15 = call i32 @spin_unlock(i32* %14)
  %16 = load %struct.netfs_trans_dst*, %struct.netfs_trans_dst** %2, align 8
  %17 = call i32 @netfs_trans_remove_dst(%struct.netfs_trans_dst* %16)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @list_del_init(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @netfs_trans_remove_dst(%struct.netfs_trans_dst*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
